@@ -10,6 +10,7 @@ use HTTP::Request::Common;
 use HTTP::Status qw/ :constants /;
 use HTTP::Tiny;
 use Plack::Test;
+use WWW::Mechanize::Chrome;
 
 use CHI;
 use Log::Log4perl qw/ :easy /;
@@ -18,9 +19,20 @@ use Plack::App::Prerender;
 
 Log::Log4perl->easy_init($ERROR);
 
+my $mech = WWW::Mechanize::Chrome->new(
+    headless         => 1,
+    separate_session => 1,
+);
+
+$SIG{INT} = sub {
+    $mech->close;
+    exit 1;
+};
+
 my $cache = CHI->new( driver => 'Memory', global => 1 );
 
 my $handler = Plack::App::Prerender->new(
+    mech    => $mech,
     rewrite => 'https://httpbin.org',
     cache   => $cache,
     wait    => 5,
@@ -39,5 +51,7 @@ test_psgi
         like $res->content, qr/react-text/, 'has dynamic text';
 
 };
+
+$mech->close;
 
 done_testing;
