@@ -7,6 +7,9 @@ Revision history for {{ $dist->name }}:
 
   - The cache is now optional, GH#3.
 
+  [Tests]
+  - Ensure chrome services are closed when tests finish.
+
 v0.1.2    2020-10-14 15:01:42+01:00 Europe/London
   [Bug Fixes]
   - The User-Agent header is forwarded as X-Forwarded-User-Agent, GH#1.
